Added border to profile picture with on hover effect

--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -41,7 +41,7 @@
   border: none;
 }
 
-.challengesBtn:hover {
+.challengeBtn:hover {
   background-color: hsl(184, 61%, 60%);
   border: none;
   outline: none;
