--- a/client/src/css/profile.module.css
+++ b/client/src/css/profile.module.css
@@ -21,7 +21,7 @@
   height: 100%;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
@@ -32,6 +32,7 @@
   max-width: 500px;
   margin-top: 160px;
   margin-right: 80px;
+  margin-left: 40px;
   border-radius: 10px;
   display: flex;
   text-align: center;
@@ -125,9 +126,10 @@
 .profileCard {
   flex: 1;
   width: 100%;
-  max-width: 500px;
+  max-width: 600px;
   margin-top: 160px;
   margin-left: 80px;
+  margin-right: 40px;
   border-radius: 10px;
   display: flex;
   text-align: center;
@@ -147,6 +149,7 @@
 
 .profileHeader {
   color: rgb(92, 208, 216);
+  /* font-size: 17pt; */
 }
 
 .profileItem {
