--- a/client/src/css/diet.module.css
+++ b/client/src/css/diet.module.css
@@ -26,7 +26,7 @@
   background-color: hsl(184, 61%, 60%);
   border: none;
   outline: none;
-  color: white;
+  color: black;
 }
 
 .dietBtn:active,
