made workout form hidden unless clicked

--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -75,8 +75,8 @@
 }
 
 .workoutForm {
-  /* border: 2px solid blue;
-  border-radius: 10px; */
+  border: 2px solid blue;
+  border-radius: 10px;
   /* display: none; */
 }
 
@@ -94,5 +94,7 @@
   width: 500px;
 }
 
-
+.hidden {
+  display: none;
+}
 
