--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -28,6 +28,7 @@
 
 .challengeHeader {
   text-align: center;
+  margin-bottom: 16px;
   color: rgb(92, 208, 216);
 }
 
@@ -57,9 +58,7 @@
 }
 
 .pointsBalance {
-  text-align: left;
   margin-top: 24px;
-  margin-left: 20px;
   color: rgb(92, 208, 216);
 }
 
