--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -108,3 +108,31 @@
   display: none;
 }
 
+.arrowButton {
+  position: relative;
+  padding-right: 20px;
+}
+
+.arrowRight {
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 5px solid #fff;
+  transform: translateY(-50%);
+}
+
+.arrowLeft {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-right: 5px solid #fff;
+  transform: translateY(-50%);
+}
