--- a/client/src/css/diet.module.css
+++ b/client/src/css/diet.module.css
@@ -43,21 +43,21 @@
 .dietBtn1{
  position: absolute;
  left: 37%;
- top: 140px;
+ top: 135px;
  z-index: 1;
 }
 
 .dietBtn2{
   position: absolute;
   right: 37%;
-  top: 140px;
+  top: 135px;
   z-index: 1;
  }
 
  .dietBtnToday{
   position: absolute;
-  left: 31.5%;
-  top: 140px;
+  left: 30%;
+  top: 135px;
   z-index: 1;
  }
 
@@ -89,7 +89,7 @@
 
 .date {
   position: absolute;
-  top: -35px;
+  top: -40px;
   left: 0;
   width: 100%;
   z-index: 0;
@@ -117,7 +117,7 @@
   width: 500px;
 }
 
-@media (max-width: 810px) {
+@media (max-width: 767px) {
   html,
   body {
     height: 100%;
@@ -150,5 +150,18 @@
 
   .date {
     top: -35px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1200px){
+  .dietBtn1, .dietBtn2, .dietBtnToday {
+    position:static;
+  }
+
+  .day,
+  .day > strong,
+  .day div {
+    display: block;
+    margin-right: 20px;
   }
 }
