Added saved message to settings

--- a/client/src/css/settings.module.css
+++ b/client/src/css/settings.module.css
@@ -2,6 +2,17 @@
   margin-right: 28px;
 }
 
+.savedMessage{
+  color:rgb(92, 208, 216);
+  font-size: 18pt;
+  margin-bottom: 5px;
+  min-width: 400px;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 70px #fff, 0 0 80px #fff, 0 0 100px #fff, 0 0 150px #fff; 
+}
+
+
+
 .settingsBtn {
   margin-top: 40px;
   margin-bottom: 12px;
@@ -47,7 +58,7 @@
 }
 
 .settings h1 {
-  margin-bottom: 40px;
+  margin-bottom: 5px;
 }
 
 .settings input {
