--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -121,10 +121,6 @@
   display: flex;
   justify-content: center;
 }
-.test:checked{
-  background-color: hsl(184, 61%, 70%);
-  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
-}
 
 .exerciseButtons,
 .markButton,
@@ -174,10 +170,14 @@
 .hiddenButton {
   margin: auto;
 }
-
 .checkbox {
   display: flex;
   flex-direction: row !important;
+  justify-content: center !important;
+}
+
+.checkbox label {
+  display: none;
 }
 .markButton {
   margin-bottom: 20px;
