--- a/client/src/css/profile.module.css
+++ b/client/src/css/profile.module.css
@@ -4,32 +4,42 @@
   margin: 0;
 }
 
-.editProfileButton {
+.editProfileBtn {
   margin-top: 10px;
   margin-bottom: 16px;
-  background-color: rgb(92, 208, 216);
-  border-color: rgb(92, 208, 216);
+  background-color: hsl(184, 61%, 40%);
+  border: none;
 }
 
-.editProfileButton:hover,
-.editProfileButton:focus {
+.editProfileBtn:hover {
+  background-color: hsl(184, 61%, 60%);
+  border: none;
+  outline: none;
   color: black;
-  background-color: hsl(184, 62%, 73%);
-  border-color: hsl(184, 62%, 73%);
-  outline: none; 
 }
 
-.saveProfileButton {
-  background-color: rgb(92, 208, 216);
-  border-color: rgb(92, 208, 216);
+.editProfileBtn:active,
+.editProfileBtn:focus {
+  background-color: hsl(184, 61%, 70%);
+  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
 }
 
-.saveProfileButton:hover,
-.saveProfileButton:focus {
+.saveProfileBtn {
+  background-color: hsl(184, 61%, 40%);
+  border: none;
+}
+
+.saveProfileBtn:hover {
+  background-color: hsl(184, 61%, 60%);
+  border: none;
+  outline: none;
   color: black;
-  background-color: hsl(184, 62%, 73%);
-  border-color: hsl(184, 62%, 73%);
-  outline: none; 
+}
+
+.saveProfileBtn:active,
+.saveProfileBtn:focus {
+  background-color: hsl(184, 61%, 70%);
+  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
 }
 
 .cardContainer {
@@ -69,7 +79,7 @@
 
 .challengeDesc {
   color: white;
-  margin-top: 8px;
+  margin-top: 16px;
 }
 
 .challengePoints {
