--- a/client/src/css/profile.module.css
+++ b/client/src/css/profile.module.css
@@ -175,14 +175,23 @@
 }
 
 .modalBtn {
-  background-color: rgb(92, 208, 216);
-  border-color: rgb(92, 208, 216);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: hsl(184, 61%, 40%);
+  border: none;
 }
 
 .modalBtn:hover {
+  background-color: hsl(184, 61%, 60%);
+  border: none;
+  outline: none;
   color: black;
-  background-color: hsl(184, 62%, 73%);
-  border-color: hsl(184, 62%, 73%);
+}
+
+.modalBtn:active,
+.modalBtn:focus {
+  background-color: hsl(184, 61%, 70%);
+  box-shadow: 0px 0px 3px 3px hsl(184, 57%, 28%);
 }
 
 .profileCard {
