--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -294,18 +294,28 @@
 }
 
 @media (min-width: 768px) and (max-width: 899px) {
-  .fitnessContainer{
+  /* .fitnessContainer{
     background-color: rgb(40, 38, 128);
+  } */
+  .workoutPlanContainer{
+    margin-top: -151px;
   }
 
   .streakContainer {
-    right: 65px;
-    top: -5px;
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 65px;
+
+    top: 134px;
+    right: 0;
   }
   .graph {
     display: flex;
     flex-direction: column;
     height: 169px;
+  }
+  .graphs{
+    display: flex;
   }
 
   .anExercise{
@@ -314,8 +324,40 @@
   .graph p {
     display: none;
   }
+  .PrevNext{
+    top: 182px;
+  }
+.day{
+  margin-top: 260px;
 }
 
+  .newPlan {
+    display: none !important;
+  }
+
+  .workoutForm {
+    top: 50px;
+    left: 1px;
+    display: flex;
+    padding: 0 10px;
+  }
+  .workoutForm label {
+    margin-top: 30px;
+  }
+  .workoutForm p {
+    display: none;
+  }
+
+  .workoutForm button {
+    margin-top: 30px;
+  }
+
+  .workoutForm button + p {
+    display: contents;
+  }
+}
+
+/* THIS NEEDS TO BE HERE */
 @media (min-width: 768px) and (max-width: 1200px) {
   .day {
     flex-direction: column;
@@ -421,6 +463,7 @@
     top: 50px;
     left: 1px;
     display: flex;
+    padding: 0 10px;
   }
   .workoutForm label {
     margin-top: 30px;
