--- a/client/src/css/coach.module.css
+++ b/client/src/css/coach.module.css
@@ -45,7 +45,7 @@ ul {
   padding: 24px;
   padding-bottom: 5rem;
   margin-top: 100px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   color: white;
   width: auto;
 }
@@ -53,6 +53,12 @@ ul {
 .chatMessageContainer {
   display: flex;
   align-items: center;
+  margin-top: 16px;
+  margin-bottom: 30px;
+}
+
+.userContainer {
+  flex-direction: row-reverse;
   margin-top: 16px;
   margin-bottom: 30px;
 }
@@ -80,6 +86,7 @@ ul {
 .userAvatar {
   background-color: white;
   margin-right: 10px;
+  align-self: flex-start;
   width: 40px;
   height: 40px;
 }
@@ -96,22 +103,41 @@ ul {
 }
 
 .message {
-  padding: 10px 30px 10px 30px;
-  border-radius: 10px;
-  left: 40px;
+  padding: 10px 15px 10px 15px;
+  border-radius: 20px;
+  left: 20px;
   position: relative;
   background-color: gray;
   max-width: 65vw;
 }
 
-.message:before {
+.coachMessage:before {
   content: "";
   position: absolute;
   height: 0;
-  border-top: 13px solid transparent;
-  border-right: 50px solid gray;
-  border-bottom: 25px solid transparent;
-  margin: -6px 0 0 -55px;
+  border-top: 10px solid transparent;
+  border-right: 20px solid gray;
+  border-bottom: 10px solid transparent;
+  /* margin: -6px 0 0 -40px; */
+  left: -12px;
+  top: 11px;
+}
+
+.userMessage {
+  left: auto;
+  right: 30px;
+}
+
+.userMessage:after {
+  content: "";
+  position: absolute;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-left: 20px solid gray;
+  border-bottom: 10px solid transparent;
+  /* margin: -6px 0 0 -40px; */
+  right: -12px;
+  top: 11px;
 }
 
 .textInputContainer {
@@ -128,7 +154,7 @@ ul {
   border: none;
   outline: none;
   box-sizing: border-box;
-  font-size: 1.25rem;
+  /* font-size: 1rem; */
   padding: 12px;
   margin: 0;
 }
@@ -148,7 +174,7 @@ ul {
 
   .chatLogContainer {
     padding: 24px;
-    padding-bottom: 100rem;
+    padding-bottom: 10rem;
     margin-top: 100px;
     margin-bottom: 50px;
     overflow-y: auto;
@@ -173,6 +199,10 @@ ul {
     text-decoration: none;
   }
 
+  .message{
+    font-size: 0.90em;
+  }
+  
   .textInputContainer {
     background-color: #d4d4d4;
     padding: 12px;
